# thinky

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/nn_agents/: cli.py  discover.py  logger.py
src/thinky/: __init__.py  _constants.py  _discover.py  _project_setup.py  _registry.py  _run.py  cli.py  client.py  exceptions.py  logger.py  logging.py  tools.py
src/thinky/_agents/: _example_agent.py
src/thinky/api/: main.py  schemas.py
src/thinky/api/db/: models.py  session.py
src/thinky/api/routes/: agents.py  health.py  tool.py  traces.py  v1.py
src/thinky/custom_agents/: assistant.py  calc_agent.py
tests/: conftest.py  test_client.py  test_discover.py  test_registry.py
tests/api/: test_health.py
